<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>health.medunited</groupId>
    <artifactId>logsearch</artifactId>
    <version>1.0-SNAPSHOT</version>
  </parent>
  <groupId>health.medunited</groupId>
  <artifactId>logsearch-backend</artifactId>
  <version>1.0-SNAPSHOT</version>
  <packaging>war</packaging>
  <properties>
    <maven.compiler.source>11</maven.compiler.source>
    <maven.compiler.target>11</maven.compiler.target>
    <olingo.version>2.0.12</olingo.version>
    <failOnMissingWebXml>false</failOnMissingWebXml>
  </properties>
  <dependencies>
    <dependency>
      <groupId>org.apache.olingo</groupId>
      <artifactId>olingo-odata2-core</artifactId>
      <version>${olingo.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.olingo</groupId>
      <artifactId>olingo-odata2-api</artifactId>
      <version>${olingo.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.olingo</groupId>
      <artifactId>olingo-odata2-jpa-processor-api</artifactId>
      <version>${olingo.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.olingo</groupId>
      <artifactId>olingo-odata2-jpa-processor-core</artifactId>
      <version>${olingo.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.olingo</groupId>
      <artifactId>olingo-odata2-api-annotation</artifactId>
      <version>${olingo.version}</version>
    </dependency>
    <dependency>
      <groupId>javax</groupId>
      <artifactId>javaee-api</artifactId>
      <version>8.0</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.eclipse</groupId>
      <artifactId>yasson</artifactId>
      <version>1.0.1</version>
    </dependency>
    <dependency>
      <groupId>org.glassfish</groupId>
      <artifactId>javax.json</artifactId>
      <version>1.1.2</version>
    </dependency>
    <dependency>
      <groupId>org.eclipse.microprofile</groupId>
      <artifactId>microprofile</artifactId>
      <version>2.0.1</version>
      <type>pom</type>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <version>5.10.0</version> <!-- can be omitted when using the BOM -->
      <scope>test</scope>
    </dependency>
  </dependencies>
  <build>
    <finalName>logsearch-backend</finalName>
    <plugins>
      <plugin>
        <groupId>org.wildfly.plugins</groupId>
        <artifactId>wildfly-maven-plugin</artifactId>
        <version>4.0.0.Final</version>
        <configuration>
          <fork>true</fork>
          <feature-pack-location>
            wildfly@maven(org.jboss.universe:community-universe):current/beta#26.1.3.Final
          </feature-pack-location>
          <serverConfig>../../../../wildfly-configuration/standalone.xml</serverConfig>
          <!--
              <command>/extension=org.wildfly.extension.microprofile.metrics-smallrye:add</command>
          -->
          <java-opts>
            <java-opt>--add-opens=java.base/java.lang=ALL-UNNAMED</java-opt>
            <java-opt>--add-exports=java.desktop/sun.awt=ALL-UNNAMED</java-opt>
            <java-opt>--add-exports=java.naming/com.sun.jndi.ldap=ALL-UNNAMED</java-opt>
            <java-opt>--add-opens=java.base/java.lang.invoke=ALL-UNNAMED</java-opt>
            <java-opt>--add-opens=java.base/java.lang.reflect=ALL-UNNAMED</java-opt>
            <java-opt>--add-opens=java.base/java.io=ALL-UNNAMED</java-opt>
            <java-opt>--add-opens=java.base/java.security=ALL-UNNAMED</java-opt>
            <java-opt>--add-opens=java.base/java.util=ALL-UNNAMED</java-opt>
            <java-opt>--add-opens=java.base/java.util.concurrent=ALL-UNNAMED</java-opt>
            <java-opt>--add-opens=java.management/javax.management=ALL-UNNAMED</java-opt>
            <java-opt>--add-opens=java.naming/javax.naming=ALL-UNNAMED</java-opt>
            <java-opt>-agentlib:jdwp=transport=dt_socket,address=8787,server=y,suspend=n</java-opt>
          </java-opts>
          <server-args>
            <server-arg>-Djboss.https.port=8444</server-arg>
          </server-args>
          <add-user>
            <users>
              <user>
                <username>admin</username>
                <password>admin</password>
              </user>
            </users>
          </add-user>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>